--- a/Style/Style.css
+++ b/Style/Style.css
@@ -177,3 +177,32 @@ i.ion-log-in.small{
 	background: url(../images/accesoirs.png) no-repeat center center ;
 	background-size: cover;
 }
+
+.modal{
+	width: 20%;
+	max-height: 50%;
+}
+
+   /* label focus color */
+   .input-field input[type=text]:focus + label {
+     color: #0097a7;
+   }
+   /* label underline focus color */
+   .input-field input[type=text]:focus {
+     border-bottom: 1px solid #000;
+     box-shadow: 0 1px 0 0 #000;
+   }
+   /* valid color */
+   .input-field input[type=text].valid {
+     border-bottom: 1px solid #000;
+     box-shadow: 0 1px 0 0 #000;
+   }
+   /* invalid color */
+   .input-field input[type=text].invalid {
+     border-bottom: 1px solid #000;
+     box-shadow: 0 1px 0 0 #000;
+   }
+   /* icon prefix focus color */
+   .input-field .prefix.active {
+     color: #000;
+   }
