--- a/Style/Style.css
+++ b/Style/Style.css
@@ -191,11 +191,11 @@ i.ion-social-facebook.large{
 }
 
    /* label focus color */
-   .input-field input[type=text]:focus + label {
+   .input-field input:focus + label {
      color: #0097a7;
    }
    /* label underline focus color */
-   .input-field input[type=text]:focus {
+   .input-field input:focus {
      border-bottom: 1px solid #0097a7;
      box-shadow: 0 1px 0 0 #0097a7;
    }
