--- a/Style/Style.css
+++ b/Style/Style.css
@@ -75,6 +75,12 @@ i.ion-social-facebook.large{
 	height: 22cm;
 	background-color: rgba(173, 20, 87, 0.2);
 }
+
+#services{
+	height: 22cm;
+	background-color: rgba(173, 20, 87, 0.2);
+}
+
 #produits h3{
 	margin-top: 0px;
 	margin-bottom: 20px;
