--- a/Style/Style.css
+++ b/Style/Style.css
@@ -259,3 +259,7 @@ i.ion-social-facebook.large{
    		text-align: center;
    		margin-left: 8px;
    }
+
+   footer.page-footer{
+   	margin-top: 0px;
+   }
