--- a/Style/Style.css
+++ b/Style/Style.css
@@ -183,17 +183,17 @@ i.ion-social-facebook.large{
 }
 
 /*transition starts here*/
-.view{
+#produits .view{
 	position: relative;
 }
-.view .mask {
+#produits .view .mask {
     position: absolute;
     overflow: hidden;
     top: 0;
     left: 0;
     height: 100%;
 }
-.view h2 {
+#produits .view h2 {
 	height: 50px;
     text-transform: uppercase;
     color: #fff;
@@ -204,7 +204,7 @@ i.ion-social-facebook.large{
     background: rgba(0, 0, 0, 0.8);
     /*margin: 4px 0 0 0*/
 }
-.view p {
+#produits .view p {
     
     font-size: 14px;
     position: relative;
@@ -212,7 +212,7 @@ i.ion-social-facebook.large{
     padding: 10px 20px 20px;
     text-align: center
 }
-.view a.info {
+#produits .view a.info {
     display: inline-block;
     text-decoration: none;
     padding: 7px 14px;
@@ -221,7 +221,7 @@ i.ion-social-facebook.large{
     text-transform: uppercase;
     box-shadow: 0 0 1px #000
 }
-.view a.info:hover {
+#produits .view a.info:hover {
     box-shadow: 0 0 5px #000
 }
 .guitar .featured-image{
@@ -255,6 +255,63 @@ i.ion-social-facebook.large{
 	width: 100%;
 	background: url(../images/accesoirs.png) no-repeat center center ;
 	background-size: cover;
+}
+
+/*OnHover Mask About*/
+#about .view {
+    width: 250px;
+    height: 250px;
+    margin: 10px;
+    float: left;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    cursor: default;
+    /*background: #fff url(../images/bob.png) no-repeat center center*/
+}
+#about .view .mask, .view .content {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0
+}
+#about .view img {
+    display: block;
+    position: relative
+}
+#about .view h2 {
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.8);
+    margin: 20px 0 0 0
+}
+#about .view p {
+    font-family: Georgia, serif;
+    font-style: italic;
+    font-size: 12px;
+    position: relative;
+    color: #fff;
+    padding: 10px 20px 20px;
+    text-align: center
+}
+#about .view a.info {
+    display: inline-block;
+    text-decoration: none;
+    padding: 7px 14px;
+    background: #000;
+    color: #fff;
+    text-transform: uppercase;
+    box-shadow: 0 0 1px #000
+}
+#about .view a.info:hover {
+    box-shadow: 0 0 5px #000
 }
 
 .modal{
