--- a/Style/Animation.css
+++ b/Style/Animation.css
@@ -81,4 +81,49 @@
    -ms-transition-delay: 0.2s;
    transition-delay: 0.2s;
 }
-				
+
+#about .view img{
+    transition: all 0.5s ease-out;
+   opacity: 1;
+}
+#about .view .mask { 
+   background-color: rgba(0, 151, 167,0.5);
+    transform: rotate(0deg) scale(1);
+   opacity: 0;
+   transition: all 0.3s ease-out;
+    transform: translateY(-200px) rotate(180deg);
+}
+#about .view h2{
+    transform: translateY(-200px);
+   transition: all 0.2s ease-in-out;
+}
+#about .view p { 
+    transform: translateY(-200px);
+   transition: all 0.2s ease-in-out;
+}
+#about .view a.info { 
+    transform: translateY(-200px);
+   transition:  all 0.2s ease-in-out;
+} 
+
+#about .view:hover img{
+    transform: rotate(720deg) scale(0);
+   opacity: 0;
+}
+#about .view:hover .mask { 
+   opacity: 1;  
+    transform: translateY(0px) rotate(0deg);
+    transition-delay: 0.4s;
+}                                                                 
+#about .view:hover h2 { 
+    transform: translateY(0px);
+   transition-delay: 0.7s;
+}
+#about .view:hover p { 
+   transform: translateY(0px);
+   transition-delay: 0.6s;
+}
+#about .view:hover a.info { 
+    transform: translateY(0px);
+   transition-delay: 0.5s;
+}
