--- a/Style/Style.css
+++ b/Style/Style.css
@@ -269,8 +269,8 @@ i.ion-social-facebook.large{
 
 /*OnHover Mask #about*/
 #about .view {
-    width: 100%;
-    height: 100%;
+    width:250px;
+    height: 250px;
     margin: 10px;
     float: left;
     overflow: hidden;
@@ -279,10 +279,10 @@ i.ion-social-facebook.large{
     cursor: default;
 }
 #about .view .mask, .view .content {
-
+	width: 250px;
+	height: 250px;
     position: absolute;
     overflow: hidden;
-    border-radius: 50%;
     top: 0;
     left: 0
 }
