--- a/Style/Style.css
+++ b/Style/Style.css
@@ -271,7 +271,7 @@ i.ion-social-facebook.large{
 #about .view {
     width:250px;
     height: 250px;
-    margin: 10px;
+    /*margin: 10px;*/
     float: left;
     overflow: hidden;
     position: relative;
