--- a/Style/Style.css
+++ b/Style/Style.css
@@ -161,6 +161,14 @@ i.ion-social-facebook.large{
 	background-color: rgba(173, 20, 87, 0.1);
 	margin-bottom: 70px;
 }
+#about .container1{
+	vertical-align: middle;
+	/*width: 1366px;*/
+	text-align: center;
+	margin-right: auto;
+	margin-left: auto;
+
+}
 
 #about .container{
 	margin-top: 40px;
@@ -269,9 +277,9 @@ i.ion-social-facebook.large{
 
 /*OnHover Mask #about*/
 #about .view {
-    width:250px;
+    width: 250px;
     height: 250px;
-    /*margin: 10px;*/
+    margin: 10px;
     float: left;
     overflow: hidden;
     position: relative;
@@ -279,7 +287,7 @@ i.ion-social-facebook.large{
     cursor: default;
 }
 #about .view .mask, .view .content {
-	width: 250px;
+	width: 100%;
 	height: 250px;
     position: absolute;
     overflow: hidden;
