--- a/Style/Style.css
+++ b/Style/Style.css
@@ -66,7 +66,7 @@ i.ion-social-facebook.large{
 	max-width: 977px;
 	max-height: 611px;	
 }
-.container{
+#home.container{
 	width:977px;
 	padding-top: 0px;
 }
@@ -161,13 +161,8 @@ i.ion-social-facebook.large{
 	background-color: rgba(173, 20, 87, 0.1);
 	margin-bottom: 70px;
 }
-#about .container1{
-	vertical-align: middle;
-	text-align: center;
 
-}
-
-#about .container{
+#about .container.text{
 	margin-top: 40px;
 	margin-bottom: 0px;
 	text-align: center;
@@ -274,9 +269,9 @@ i.ion-social-facebook.large{
 
 /*OnHover Mask #about*/
 #about .view {
-    width: 250px;
-    height: 250px;
-    /*margin: 10px;*/
+    width: 200px;
+    height: 200px;
+    margin: 10px;
     overflow: hidden;
     position: relative;
     text-align: center;
@@ -285,8 +280,8 @@ i.ion-social-facebook.large{
     margin-left: auto;
 }
 #about .view .mask, .view .content {
-	width: 100%;
-	height: 250px;
+	width: 200px;
+	height: 200px;
     position: absolute;
     overflow: hidden;
     top: 0;
@@ -301,10 +296,11 @@ i.ion-social-facebook.large{
     color: #fff;
     text-align: center;
     position: relative;
-    font-size: 17px;
+    font-size: 10px;
     padding: 10px;
     background: rgba(0, 0, 0, 0.8);
-    margin: 20px 0 0 0
+    margin: 40px 0 0 0;
+    line-height: 10px;
 }
 #about .view p {
     font-family: Georgia, serif;
