--- a/Style/Style.css
+++ b/Style/Style.css
@@ -333,6 +333,43 @@ i.ion-social-facebook.large{
     box-shadow: 0 0 5px #000
 }
 
+#contact .view{
+	position: relative;
+}
+#contact .view .mask {
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    height: 100%;
+}
+#contact .view h2 {
+	height: 50px;
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    /*padding: 2px;*/
+    background: rgba(0, 0, 0, 0.8);
+    /*margin: 4px 0 0 0*/
+}
+#contact .view p {
+    
+    position: relative;
+    color: #fff;
+    padding: 10px 20px 20px;
+    text-align: center
+}
+#contact .view a.info {
+    display: inline-block;
+    text-decoration: none;
+    padding: 7px 14px;
+    background: #000;
+    color: #fff;
+    text-transform: uppercase;
+    box-shadow: 0 0 1px #000
+}
 
 .guitar .featured-image{
 	height: 250px;
