--- a/Style/Style.css
+++ b/Style/Style.css
@@ -149,10 +149,16 @@ i.ion-social-facebook.large{
 #contact .container{
 	text-align: center;
 	box-shadow: 0 0 10px rgba(0,0,0,0.4);
-	background-color: rgba(173, 20, 87, 0.1);
+	background-color: rgba(255, 255, 255, 0.1);
+	height: 10cm;
 }
 
 /*Contact Form*/
+#contact .input-field label {
+     color: #E8E7E7;
+     text-shadow: 0px 2px 6px #0097a7;
+     font-size: 16px;
+   }
    /* label focus color */
 #contact .input-field input:focus + label {
      color: #0097a7;
@@ -177,7 +183,6 @@ i.ion-social-facebook.large{
      color: #0097a7;
 }
 
-/*END CONTACT FORM*/
 
 #produits h3{
 	margin-top: 0px;
