--- a/Style/Style.css
+++ b/Style/Style.css
@@ -160,11 +160,11 @@ i.ion-social-facebook.large{
      font-size: 16px;
    }
    /* label focus color */
-#contact .input-field input:focus + label {
-     color: #0097a7;
+#contact .input-field input:focus + label{
+     color: red;
 }
    /* label underline focus color */
-#contact .input-field input:focus {
+#contact .input-field input:focus{
      border-bottom: 1px solid #0097a7;
      box-shadow: 0 1px 0 0 #0097a7;
 }
