--- a/Style/Style.css
+++ b/Style/Style.css
@@ -32,7 +32,9 @@ i.ion-social-twitter.large{
 i.ion-social-facebook.large{
 	font-size: 32px;
 }
-
+i.ion-social-rss.large{
+	font-size: 32px;
+}
 
 #home{
 	height: 22cm;
@@ -499,4 +501,7 @@ p.icone-texte{
 
 footer.page-footer{
 	margin-top: 0px;
+}
+footer ul li a{
+	color:white;
 }
