--- a/Style/Style.css
+++ b/Style/Style.css
@@ -147,7 +147,21 @@ i.ion-social-rss.large{
 	height: 19cm;
 	background-color: rgba(173, 20, 87, 0.2);
 }
-
+.input-field label{
+	color:white;
+}
+#contact.input-field input[type=text]:focus + label,
+#contact.input-field input[type=password]:focus + label,
+#contact.input-field input[type=email]:focus + label,
+#contact.input-field input[type=url]:focus + label,
+#contact.input-field input[type=date]:focus + label,
+#contact.input-field input[type=tel]:focus + label,
+#contact.input-field input[type=number]:focus + label,
+#contact.input-field input[type=search]:focus + label,
+#contact.input-field textarea:focus.materialize-textarea + label {
+   	color: #0097a7;
+   	font-size: 16px;
+   }
 #contact .container{
 	text-align: center;
 	box-shadow: 0 0 10px rgba(0,0,0,0.4);
@@ -156,33 +170,40 @@ i.ion-social-rss.large{
 }
 
 /*Contact Form*/
-#contact .input-field label {
-     color: #E8E7E7;
-     text-shadow: 0px 2px 6px #0097a7;
-     font-size: 16px;
-   }
+
    /* label focus color */
 #contact .input-field input:focus + label{
-     color: red;
+     color: #0097a7;
 }
+/*#contact .input-field label {
+     color: #ffffff;
+     font-size: 16px;
+   }*/
    /* label underline focus color */
 #contact .input-field input:focus{
      border-bottom: 1px solid #0097a7;
-     box-shadow: 0 1px 0 0 #0097a7;
+     box-shadow: 0 0 1 #000000;
 }
    /* valid color */
 #contact .input-field input.valid {
      border-bottom: 1px solid #0097a7;
-     box-shadow: 0 1px 0 0 #0097a7;
 }
    /* invalid color */
 #contact .input-field input.invalid {
      border-bottom: 1px solid #ad1457;
-     box-shadow: 0 1px 0 0 #ad1457;
 }
    /* icon prefix focus color */
 #contact .input-field .prefix.active {
      color: #0097a7;
+}
+
+#contact i{
+	color: white;
+}
+
+
+#contact button{
+	background-color: #0097a7;
 }
 
 
