--- a/Style/Style.css
+++ b/Style/Style.css
@@ -147,6 +147,9 @@ i.ion-social-rss.large{
 	height: 19cm;
 	background-color: rgba(173, 20, 87, 0.2);
 }
+button, input, optgroup, select, textarea {
+	color: white;
+}
 .input-field label{
 	color:white;
 }
