--- a/css/materialize.css
+++ b/css/materialize.css
@@ -6096,7 +6096,8 @@ label {
 ****************************/
 .input-field {
   position: relative;
-  margin-top: 1rem; }
+  margin-top: 1rem; 
+}
   .input-field label {
     color: #9e9e9e;
     position: absolute;
